rebased files from src

--- a/backend/.development.env
+++ b/backend/.development.env
@@ -1,8 +1,21 @@
 PORT=7000
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_DB=nest-course
-POSTGRES_PASSWORD=register06
+POSTGRES_PASSWORD=register
 JWT_SECRET_KEY=jwt_token_secret_key
+TYPEORM_ENTITIES=dist/**/*entity.js
+TYPEORM_MIGRATIONS=dist/db/migrations/*.js
+TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_MIGRATIONS_RUN=false
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_MIGRATIONS_TABLE_NAME=migrations
+LOGGING=true
+LOGGER=file
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_USER=yura.ilchyshyn06@gmail.com
+MAIL_PASSWORD=register-06
+
 
